[package]
name = "wasm_host"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-rust = "0.8"
anyhow = "1.0"
notify = "4.0"
skulpin = "0.2"
log="0.4"
env_logger = "0.6"